Prepare for Render deployment - remove Docker sandbox, env-based config